# prodeco

./: .gitignore  README.md  pyoxidizer.bzl  requirements.txt  setup.py  temp
.github/: dependabot.yml
.github/workflows/: binary_checks.yaml  brew-formula.yaml   dist-build-linux.yaml  dist-build-linux.yaml   dist-build-mac.yaml  docker-build-multiarch.yaml  python-package.yml  python-publish.yaml
prodeco/: herbolarionavarro.py  prodeco.py
prodeco/Datasources/: herbolarionavarro_2023-06-30.csv
prodeco/includes/: data.csv  herbolarionavarro.py
src/: pyproject.toml
src/prodeco/: __init__.py  prodeco.py
src/prodeco/includes/: herbolarionavarro.py
